--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
+    "axios": "^1.12.2",
+    "framer-motion": "12.23.22",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "^5.0.0",
-    "framer-motion": "12.23.22"
+    "react-router-dom": "^7.9.4",
+    "react-scripts": "^5.0.0"
   },
   "devDependencies": {
     "@types/react": "19.0.0",
