--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "react",
+  "name": "inventory-frontend",
   "version": "1.0.0",
-  "description": "",
-  "keywords": [],
+  "description": "Inventory Management Frontend",
   "main": "src/index.tsx",
   "proxy": "http://localhost:5000",
   "dependencies": {
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
     "axios": "^1.12.2",
-    "framer-motion": "12.23.22",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.9.4",
-    "react-scripts": "^5.0.0"
+    "framer-motion": "^12.23.22",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.1",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
-    "@types/react": "19.0.0",
-    "@types/react-dom": "19.0.0",
-    "loader-utils": "3.2.1",
-    "typescript": "5.7.2"
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "loader-utils": "^3.2.1",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "vercel-build": "npm install --legacy-peer-deps && npm run build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
